<resources>
    <string name="app_name">Student IEE-IHU</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="required">Required*</string>
    <string name="login">Sign in</string>
    <string name="create_account">New user? Sign up</string>
    <string name="register">Sign up</string>
    <string name="firstname">Firsname</string>
    <string name="verify_password">Verify password</string>
    <string name="lastname">Lastname</string>
    <string name="am">AM</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logout">Logout</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_email">Reset email</string>
    <string name="delete_account">Delete account</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share app</string>
    <string name="report">Report or changes</string>
    <string name="change_language">Change language</string>
    <string name="greek">Greek</string>
    <string name="english">English</string>
    <string name="change_theme">Change theme</string>
    <string name="dark">Dark</string>
    <string name="white">White</string>
    <string name="auto">Auto</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_app">About app</string>
    <string name="description">Description</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="not_network">No network</string>
    <string name="communities">Communities</string>
    <string name="facebook_groups">Facebook groups</string>
    <string name="discord_servers">Discord servers</string>
    <string name="facebook_pages">Facebook pages</string>
    <string name="other_community">Other</string>
    <string name="semesters">Semesters</string>
    <string name="find">Find</string>
    <string name="teachers">Teachers</string>
    <string name="course">Course</string>
    <string name="title">Title</string>
    <string name="first_semester">1st Semester</string>
    <string name="second_semester">2nd Semester</string>
    <string name="third_semester">3rd Semester</string>
    <string name="fourth_semester">4th Semester</string>
    <string name="fifth_semester">5th Semester</string>
    <string name="sixth_semester">6th Semester</string>
    <string name="seventh_semester">7th Semester</string>
    <string name="eighth_semester">8th Semester</string>
    <string name="ninth_semester">9th Semester</string>
    <string name="tenth_semester">10th Semester</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="personal_site">Personal site</string>
    <string name="maps">Maps</string>
    <string name="ihu_sindou">I.H.U. Sindou</string>
    <string name="eudoxus">Eudoxus</string>
    <string name="courses">Courses</string>
    <string name="semester">Semester</string>
    <string name="zoom" translatable="false">Zoom</string>
    <string name="zoom_link_1">Installation - Audio - Video</string>
    <string name="zoom_link_2">Participant\'s guide</string>
    <string name="guides">Guides</string>
    <string name="webview">WebView</string>
    <string name="rooms">Rooms</string>
    <string name="apps" translatable="false">Apps</string>
    <string name="new_email">New email</string>
    <string name="old_email">Old email</string>
    <string name="update_email">Update email</string>
    <string name="send_verification_email">Send verification email</string>
    <string name="help_you">Click to help you!</string>
    <string name="help_title">Help page</string>
    <string name="first_day">First day</string>
    <string name="zoom_rooms">Zoom rooms</string>
    <string name="r1_r8" translatable="false">R1-R8</string>
    <string name="e1_e8" translatable="false">E1-E8</string>
    <string name="e1" translatable="false">E1</string>
    <string name="e2" translatable="false">E2</string>
    <string name="e3" translatable="false">E3</string>
    <string name="e4" translatable="false">E4</string>
    <string name="e5" translatable="false">E5</string>
    <string name="e6" translatable="false">E6</string>
    <string name="r1" translatable="false">R1</string>
    <string name="r6" translatable="false">R6</string>
    <string name="r5" translatable="false">R5</string>
    <string name="r4" translatable="false">R4</string>
    <string name="r3" translatable="false">R3</string>
    <string name="r2" translatable="false">R2</string>
    <string name="e7" translatable="false">E7</string>
    <string name="e8" translatable="false">E8</string>
    <string name="r8" translatable="false">R8</string>
    <string name="r7" translatable="false">R7</string>
    <string name="pdf_webview">PDF webView</string>
    <string name="admin_page">Admin page</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>
    <string name="secretariat">Secretariat</string>
    <string name="network_center">Network center (NOC)</string>
    <string name="library">Library</string>
    <string name="erasmus_office">Erasmus office</string>
    <string name="practice_office">Practice office</string>
    <string name="feeding_office">Feeding office</string>
    <string name="student_residence">Student residence</string>
    <string name="president">"President "</string>
    <string name="vice_president">"Vice president "</string>
    <string name="infirmary">Infirmary</string>
    <string name="thesis">Thesis</string>
    <string name="creator">Creator</string>
    <string name="useful_websites">Useful websites</string>
    <string name="offers">Offers</string>
    <string name="official_services">Official services</string>
    <string name="unofficial_services">Unofficial services</string>
    <string name="softwares">Softwares</string>
    <string name="insert_community">Insert community</string>
    <string name="insert_course">Insert course</string>
    <string name="insert_official_service">Insert official service</string>
    <string name="insert_unofficial_service">Insert unofficial service</string>
    <string name="insert_useful_website">Insert useful website</string>
    <string name="insert_offer">Insert offer</string>
    <string name="insert_teacher">Insert teacher</string>
    <string name="insert_map">Insert map</string>
    <string name="inserts">Inserts</string>
    <string name="updates">Updates</string>
    <string name="deletes">Deletes</string>
    <string name="update_community">Update community</string>
    <string name="update_course">Update course</string>
    <string name="update_official_service">Update official service</string>
    <string name="update_unofficial_service">Update unofficial service</string>
    <string name="update_useful_website">Update useful website</string>
    <string name="update_offer">Update offer</string>
    <string name="update_teacher">Update teacher</string>
    <string name="update_map">Update map</string>
    <string name="delete_map">Delete map</string>
    <string name="delete_teacher">Delete teacher</string>
    <string name="delete_offer">Delete offer</string>
    <string name="delete_useful_website">Delete useful website</string>
    <string name="delete_unofficial_service">Delete unofficial service</string>
    <string name="delete_official_service">Delete official service</string>
    <string name="delete_course">Delete course</string>
    <string name="delete_community">Delete community</string>
    <string name="refresh">Refresh</string>
    <string name="more">More</string>
    <string name="department">Department</string>
    <string name="loading">Loading…</string>
    <string name="home_welcome">Welcome student in the application!</string>
    <string name="feeding">Feeding</string>
    <string name="housing">Housing</string>
    <string name="help_message">Help message</string>
    <string name="help_message_body">"If you have not logged out and you have closed the application and when you reopen the application it does not enter automatically. Close and reopen the application. "</string>
    <string name="successful">Successful</string>
    <string name="login_">Login…</string>
    <string name="send_reset_password_email">Send reset password email!</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="warning">Warning</string>
    <string name="input_email">Input email</string>
    <string name="input_password">Input password</string>
    <string name="must_verify_email">Must verify email!</string>
    <string name="send_email_again">Are you want to send email verification again?</string>
    <string name="failed">Failed</string>
    <string name="try_again_">Try again…</string>
    <string name="vefification_email">Verification email has been sent.</string>
    <string name="no_send_reset_password_email">"Do not send a reset email password "</string>
    <string name="must_contains">Must contains @ in email!</string>
    <string name="input_am">Input AM</string>
    <string name="input_firstname">Input firstname</string>
    <string name="input_lastname">Input lastname</string>
    <string name="input_password_or_confirm_password">Input password or confirm password</string>
    <string name="passwords_are_different">Passwords are different</string>
    <string name="updated_profile">Updated profile</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registration_failed">Registration failed, please try again!</string>
    <string name="choose_email_client">Choose email client:</string>
    <string name="error">Error</string>
    <string name="error_message">Error message:</string>
    <string name="input_new_email">Input new email</string>
    <string name="not_update_email">Not update email</string>
    <string name="password_is_wrong">Password is wrong!</string>
    <string name="updated_profile_info">Updated profile info</string>
    <string name="wait">Wait</string>
    <string name="image_uploading_">Image uploading…</string>
    <string name="share_with">Share with</string>
    <string name="privacy_policy_not_found">Privacy policy not found!</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="account_not_deleted">Account not deleted</string>
    <string name="account_deleted">Account deleted</string>
    <string name="link_not_found">Link not found!</string>
    <string name="permissions_granted">Permissions granted!</string>
    <string name="moreFeeding">"For more information you can download the Government Gazette B '1965 / 18.06.2012 (Decision 4) "</string>
    <string name="site">Website</string>
    <string name="moreLibrary">For more questions and answers here.</string>
    <string name="moreHousing">Required documents for admission to the student dormitories.</string>
    <string name="moreThesis">"Diploma Thesis Regulation (March 2021) "</string>
    <string name="netbeans" translatable="false">Netbeans</string>
    <string name="software">Software</string>
    <string name="build_p">Building P</string>
    <string name="build_h">Building H</string>
    <string name="r101" translatable="false">101</string>
    <string name="r102" translatable="false">102</string>
    <string name="r109" translatable="false">109</string>
    <string name="r201" translatable="false">201</string>
    <string name="r202" translatable="false">202</string>
</resources>