<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"
            />
        <item
            android:id="@+id/menuCommunity"
            android:icon="@drawable/ic_baseline_groups_24"
            android:title="@string/communities"
            />
        <item
            android:id="@+id/menuFind"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/find"
            />
        <item
            android:id="@+id/menuGuides"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/guides"
            />
        <item
            android:id="@+id/menuContact"
            android:icon="@drawable/ic_baseline_contact_phone_24"
            android:title="@string/contact"
            />
        <item
            android:id="@+id/menuDepartment"
            android:icon="@drawable/ic_baseline_other_houses_24"
            android:title="@string/department"
            />
        <item
            android:id="@+id/menuProfile"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/profile"
            />
        <item
            android:id="@+id/menuAdmin"
            android:icon="@drawable/ic_baseline_admin_panel_settings_24"
            android:title="@string/admin_page"
            />
        <item
            android:id="@+id/menuSettings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"
            />
    </group>

</menu>