<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_admin_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AdminMainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/blue_500"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_menu_admin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_menu_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/open_apps"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/apps"
                android:src="@drawable/alerter_ic_notifications"
                app:tint="@color/white" />

        </LinearLayout>

        <fragment
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/nav_host_fragment_admin"
            android:name="androidx.navigation.fragment.NavHostFragment"
            app:defaultNavHost="true"
            app:navGraph="@navigation/graph"
            tools:ignore="FragmentTagUsage"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view_admin"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu_admin"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header_admin"/>

</androidx.drawerlayout.widget.DrawerLayout>